# apis/UserRestApi.go
@@ -1,6 +1,8 @@
 package restapis
 
 import (
+	"friends-mgmt-gin/dtos"
+	"friends-mgmt-gin/models"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -23,6 +25,18 @@ func GetUsersHandler(c *gin.Context) {
 	c.String(http.StatusOK, "Success")
 }
 
+// PostUserHandler Create a user
 func PostUserHandler(c *gin.Context) {
-
+	var input dtos.RetrieveInput
+	if c.BindJSON(&input) == nil {
+		user := models.GetUserByEmailAddr(input.Email)
+		if user.ID == 0 {
+			models.CreateUser(input.Email)
+			c.JSON(http.StatusOK, gin.H{"success": "true"})
+		} else {
+			c.JSON(http.StatusOK, gin.H{"message": "already exist"})
+		}
+	} else {
+		c.JSON(http.StatusMethodNotAllowed, gin.H{"error": "please make sure the parms is right"})
+	}
 }
