# swagger/swagger.yaml
@@ -144,6 +144,27 @@ paths:
       responses:
         '405':
           description: Invalid input
+  /user:
+    post:
+      tags:
+        - user
+      summary: add a user by email
+      description: ''
+      operationId: user-create
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: body
+          description: need have requestor and target
+          required: true
+          schema:
+            $ref: '#/definitions/dtos.RetrieveInput'
+      responses:
+        '405':
+          description: Invalid input
 securityDefinitions:
   petstore_auth:
     type: oauth2
